# sg_rent

./: .gitignore  CLAUDE.md  README.md  data.json  docker-compose.yml  index.html
.github/workflows/: deploy.yml
assets/: index-EGxVb5dz.css  index-P9OzJsTr.js
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  export_data.py  ingest_script.py  main.py  seed.py
backend/app/api/routes/: properties.py  search.py  transit.py
backend/app/models/: property.py  search.py
backend/app/services/: commute.py  geocode.py  ranking.py
data/: mrt_stations.json
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: FilterPanel.tsx  PropertyCard.tsx  PropertyList.tsx  PropertyMap.tsx  SearchBar.tsx
frontend/src/engine/: index.ts
frontend/src/types/: index.ts
